feat: Complete Phase 3 Security Hardening - Enterprise Grade Security Implementation
🔐 CRITICAL SECURITY IMPROVEMENTS:

✅ Encryption Security:
- Remove hardcoded encryption keys from EncryptionService
- Implement PBKDF2-HMAC-SHA256 key derivation (100,000 iterations)
- Enforce mandatory ENCRYPTION_MASTER_KEY environment variable
- Add fail-fast validation for missing encryption configuration

✅ Authentication Security:
- Remove hardcoded Keycloak admin credentials (admin/admin)
- Enforce environment variables for all admin operations
- Fix credential exposure in KeycloakAdminService error logging
- Secure authentication token handling

✅ Web Application Security:
- Enable CSRF protection with OAuth2 compatibility
- Implement proper CSRF token handling for frontend consumption
- Harden CORS configuration with specific allowed headers
- Remove wildcard CORS permissions for production security

✅ Keycloak Realm Security:
- Remove demo user credentials from production realm export
- Externalize client secrets with placeholder system
- Create development-specific realm (realm-export.dev.json)
- Implement secure production deployment templates

✅ Docker Configuration Security:
- Remove all hardcoded passwords from docker-compose files
- Enforce environment variables for all sensitive configuration
- Separate development and production Docker configurations
- Add comprehensive environment variable validation

🚀 PRODUCTION DEPLOYMENT FEATURES:

📦 New Files:
- PHASE3_SECURITY_SETUP.md - Comprehensive security documentation
- .env.production.template - Production environment template
- docker/keycloak/realm-export.dev.json - Development Keycloak realm
- scripts/prepare-production-realm.sh - Production realm processor

🔧 Security Configuration:
- Updated .gitignore to prevent production secret commits
- Created automated production deployment workflow
- Implemented secret placeholder replacement system
- Added production credential generation scripts

📊 SECURITY COMPLIANCE STA